--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -299,10 +299,45 @@
           "designers": "Designers",
           "artists": "Artistes"
         } 
-    }
-    
-  }
+    },
 
+    "rex": {
+      "meta": {
+        "title": "Gabriel Gauthier | Rex Montis"
+      },
+      "hero": {
+        "title": "Rex Montis",
+        "subtitle": "Rex Montis est un jeu multijoueur créé en 8 semaines dans le cadre de Chaos Média 2021, une compétition entre classes en production interactive. Développé en équipe dans une structure de mini-entreprise, le projet a remporté la 1re place lors de l’événement."
+      },
+      "sections": {
+        "project": {
+          "title": "Le projet",
+          "text": "Le développement s’est fait en collaboration étroite entre plusieurs disciplines, avec une forte importance accordée à la communication et à l’organisation. Travailler dans cette structure m’a permis de découvrir un workflow proche d’un vrai environnement de production."
+        },
+        "role": {
+          "title": "Mon rôle",
+          "text": "Je travaillais principalement sur la programmation en C#, notamment les menus, les systèmes de score et certains aspects du multijoueur. Au fil du projet, j’ai également contribué à l’intégration de contenu et au peaufinage général afin d’améliorer l’expérience de jeu."
+        },
+        "management": {
+          "title": "Gestion de projet",
+          "text": "Lors de ce projet, j’ai appris à travailler dans une grande équipe et à gérer GitHub, en résolvant de nombreux problèmes de merge entre les versions de mes collègues. Face à des difficultés de communication et de coordination, j’ai soutenu notre gestionnaire de projet en créant des listes de tâches et en assurant le suivi entre les équipes. Cette expérience m’a permis de mieux organiser le travail sous pression et j’ai adoré prendre ce rôle de chef d’équipe pour garantir la réussite du projet."
+        },
+        "challenge": {
+          "title": "Un défi relevé",
+          "text": "Lors de ce projet, j’ai découvert ce que signifie travailler dans une grande équipe. Gérer GitHub et tous les commits a été un vrai défi, au point où j’ai dû former mes collègues à GitHub en plein milieu du projet pour remettre un peu d’ordre. Je ne peux même pas compter le nombre de fois où j’ai dû résoudre des problèmes de merge entre leurs différentes versions du code."
+        }
+      },
+      "credits": {
+        "managers": "Gestionnaires",
+        "writer": "Scénariste",
+        "programmers": "Programmeurs",
+        "graphists": "Graphistes",
+        "artists3d": "Artistes 3D",
+        "video": "Réalisateurs vidéo",
+        "audio": "Designers sonores"
+      } 
+    }
+  }
 }
 
 
