--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -366,6 +366,34 @@
         "designers": "Designers",
         "audio": "Audio"
       }
+    },
+    "carnaval": {
+      "meta": {
+        "title": "Gabriel Gauthier | Carnaval VR"
+      },
+      "hero": {
+        "subtitle": "Carnaval VR est une expérience immersive en réalité virtuelle où les joueurs peuvent explorer un carnaval interactif et s’amuser avec différentes attractions. Développé pendant mon stage chez AleoVR, ce projet m’a plongé dans le monde fascinant de la VR et m’a permis de tester mes capacités dans un contexte professionnel."
+      },
+      "project": {
+        "title": "Le projet",
+        "text": "Au début du stage, j’ai découvert le développement en VR sur Unity et appris à configurer le casque et les packages nécessaires. Grâce au framework mis à disposition par AleoVR, j’ai pu explorer des scènes et interactions VR existantes, et comprendre les bases du contrôle des objets avec les mains, du tir à l’arc et d’autres mécaniques immersives."
+      },
+      "role": {
+        "title": "Mon rôle",
+        "text": "Je me suis concentré sur la mise en place des interactions VR : attraper, lancer, tirer, et manipuler des objets dans le carnaval. J’ai également contribué à l’implémentation des mécaniques de jeu et à l’intégration des assets dans Unity, tout en veillant à ce que chaque interaction soit fluide et intuitive pour le joueur."
+      },
+      "learning": {
+        "title": "Un apprentissage clé",
+        "text": "Ce projet m’a permis de me familiariser avec le développement VR professionnel, de comprendre les contraintes techniques et ergonomiques propres à ce médium, et d’explorer ma créativité pour créer des interactions engageantes. J’ai beaucoup appris sur l’itération rapide et le design orienté utilisateur en environnement immersif."
+      },
+      "challenge": {
+        "title": "Défis techniques",
+        "text": "Le plus grand défi a été de transférer correctement le projet Unity sur le casque VR pour tester les interactions en conditions réelles. Installer et configurer tous les packages nécessaires était complexe, et j’ai dû chercher et tester plusieurs solutions pour que tout fonctionne correctement. Cette étape m’a beaucoup appris sur le flux de travail VR et la résolution de problèmes techniques."
+      },
+      "credits": {
+        "programmers": "Programmeurs",
+        "artists": "Artistes"
+      }
     }
   }
 }
